# shopee-label-prints-fixer

./: .gitattributes  README.md  package.json
public/: index.html
src/: App.svelte  Form.svelte  Header.svelte  OrderInfo.svelte  Switch.svelte  store.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
webserver/: .gitignore  package.json  tsconfig.json
webserver/src/: index_temp.html  log.ts  main.ts  print.ts  test.ts
