[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all", "devtools"] }
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
tauri-plugin-single-instance= {git="https://github.com/amrbashir/tauri-plugin-single-instance.git", rev="f8afa646bea66dc5013df8bd3d2c26af10b85e42"}
ctrlc = "3.2.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
debug = true
debug-assertions = true
